# bhai-ka-dns

./: .env.example  .gitignore  CODEBASE_CLEANUP_SUMMARY.md  Cargo.toml  Dockerfile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SYSTEM_SUMMARY.md  config.toml  dns_server.py  docker-compose.yml  requirements.txt  run_bhai_dns.py  test_dns.py  web_app.py
docs/: system-design.md
frontend/: Dockerfile  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  globals.css
frontend/src/pages/: LandingPage.tsx
k8s/: backend.yaml  configmap.yaml  mongodb.yaml  namespace.yaml
scripts/: k8s-deploy.sh  load-datasets.sh  setup.sh
src/: config.rs  errors.rs  main.rs
src/ai/: domain_analysis.rs  mod.rs  threat_detection.rs  typo_correction.rs
src/analytics/: mod.rs
src/db/: mod.rs  models.rs  queries.rs
src/dns/: cache.rs  mod.rs  resolver.rs
src/redis/: mod.rs
src/web/: mod.rs
templates/: index.html
