[package]
name = "bhai-dns-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["json", "query"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mongodb = "2.8"
bson = { version = "2.8", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
trust-dns-client = "0.23"
trust-dns-server = "0.23"
trust-dns-proto = "0.23"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
dashmap = "5.5"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
clap = { version = "4.4", features = ["derive"] }
config = "0.14"
dotenvy = "0.15"
validator = { version = "0.17", features = ["derive"] }
once_cell = "1.19"
parking_lot = "0.12"
arc-swap = "1.6"
lru = "0.12"
bloom = "0.3"
sha2 = "0.10"
base64 = "0.21"
jsonwebtoken = "9.2"
bcrypt = "0.15"
toml = "0.8"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
bb8 = "0.8"
bb8-redis = "0.13"